--- a/static/styles.css
+++ b/static/styles.css
@@ -100,6 +100,26 @@ button{
   text-align: center;
 }
 
+.register-section  {
+  width: 213px;
+  height: 36px;
+  background: url('http://i.imgur.com/fd8Lcso.png') no-repeat;
+  margin: 30px auto;
+  padding: 5px
+
+}
+
+.register {
+  padding: 3px
+}
+
+.login-section{
+  width: 213px;
+  height: 36px;
+  background: url('http://i.imgur.com/fd8Lcso.png') no-repeat;
+  margin: 30px auto;
+  padding: 5px
+}
 @media (max-width: 768px) {
   .products-container {
     display: flex;
