--- a/static/styles.css
+++ b/static/styles.css
@@ -23,6 +23,7 @@ nav {
   display: flex;
   background-color:indigo;
   justify-content: space-between;
+  align-items: center;
   padding: 10px
   
 }
@@ -99,7 +100,13 @@ button{
   border-radius: 5px;
   text-align: center;
 }
-
+.add-to-cart {
+  background-color: rgb(160, 113, 193);
+  color: #fff;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-align: center;
+}
 .register-section  {
   width: 213px;
   height: 36px;
