--- a/static/styles.css
+++ b/static/styles.css
@@ -36,9 +36,9 @@ nav {
   padding: 10px
 }
 .background-container{
-  display: flex;
-  align-items: center;
-  justify-content: center;
+ background-image: url('https://cndarcdn.scdn3.secure.raxcdn.com/m/0/wooden-instruments.jpg');
+ height: 100%;
+ width: 100%;
 }
 .background{
   display: flex;
@@ -46,28 +46,23 @@ nav {
   text-align: center;
   align-items: center;
 }
-#text1{
-  color: red;
-  font-family:Arial, Helvetica, sans-serif ;
-  font-size: 20px;
-  position: absolute;
-  text-align: center;
-  top: 75%;
-  left: 50%;
-}
-#text2{
+.texts-background{
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  color: white;
   font-weight: bold;
-  position: absolute;
+  border: 3px solid #f1f1f1;
+  position:relative;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  width: 100%;
+  height:50%;
+  padding: 20px;
   text-align: center;
-  top: 80%;
-  left: 45%;
 }
-#text3{
-  position: absolute;
-  text-align: center;
-  top: 88%;
-  left: 35%;
-}
+
 .link-to-products{
   position: absolute;
   text-align: center;
@@ -120,13 +115,33 @@ img{
 button{
   padding: 5px;
     border: 1px solid #D1FEE7;
-    color: #D1FEE7;
+    color: black;
     display: inline;
     vertical-align: middle;
 }
+.cart-btn{
+  display: flex;
+  justify-content: space-around;
+}
+.add-btn{
+  background-color:  #D1FEE7;
+  color: black;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+}
+.delete-btn{
+  background-color:  #D1FEE7;
+  color: black;
+  padding: 10px 15px;
+  border-radius: 5px;
+  text-align: center;
+  text-decoration: none;
+}
 
 .purCart{
-  background-color: black
+  background-color: #D1FEE7;
 }
 
 .search {
