--- a/static/styles.css
+++ b/static/styles.css
@@ -53,7 +53,7 @@ nav {
   font-weight: bold;
   border: 3px solid #f1f1f1;
   position:relative;
-  top: 50%;
+  top: 104px;
   left: 50%;
   transform: translate(-50%, -50%);
   z-index: 2;
@@ -88,6 +88,10 @@ nav {
  position: absolute;
  top:0%;
  right:1%;
+}
+
+.prodLink{
+  color: white;
 }
 img{
   height:80px;
